--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==6.7
 Flask==0.12.2
 Flask-Migrate==2.1.0
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
