starting the hookup to postgres

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 source venv/bin/activate
-export APP_SETTINGS="config.Config"
+export APP_SETTINGS="config.DevelopmentConfig"
+export DATABASE_URL="postgresql://localhost/birdverse_dev"
